WS_INTEGRATION/Sandbox/src/objects/Tech_Transfer_Link__c.object
<CustomObject>
    <description>This is the junction object that makes a connection between all the different parties in an agreement, disclosure, or patent.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tech Transfer Links</relationshipLabel>
        <relationshipName>Tech_Transfer_Link_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tech Transfer Links</relationshipLabel>
        <relationshipName>Tech_Transfer_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>Tech Transfer Links</relationshipLabel>
        <relationshipName>Tech_Transfer_Link_Engagement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Engagement__r.Interaction_Source_KU_Division__c</description>
        <formula>TEXT(Engagement__r.Interaction_Source_KU_Division__c)</formula>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Engagement__r.Status__c</description>
        <formula>TEXT(Engagement__r.Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Engagement__r.Title__c</description>
        <formula>Engagement__r.Title__c</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Tech Transfer Link</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TTLXID{0}</displayFormat>
        <label>Tech Transfer Link XID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tech Transfer Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>